--- a/label_detector/dyn_cfg/LabelDetector.cfg
+++ b/label_detector/dyn_cfg/LabelDetector.cfg
@@ -5,7 +5,7 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-gen.add("Debugging",   bool_t,   0, "Debugging mode on/off",  True)
+gen.add("Debugging",   bool_t,   0, "Debugging mode on/off",  False)
 
 gen.add("QR_Switch",   bool_t,   0, "enable/disable qrcode detection",  True)
 
