c_qr_scanner: modified.

--- a/label_detector/dyn_cfg/LabelDetector.cfg
+++ b/label_detector/dyn_cfg/LabelDetector.cfg
@@ -13,6 +13,9 @@ gen.add("HZL_Switch",   bool_t,   0, "enable/disable hazardous label detection",
 
 gen.add("Qrcode_side_length",    int_t,    0, "The width of QrCode's square in mm", 182,  0, 500)
 
+gen.add("QR_Canny_par1",    int_t,    0, "Canny: first threshold for the hysteresis procedure", 100,  0, 500)
+gen.add("QR_Canny_par2",    int_t,    0, "Canny: first threshold for the hysteresis procedure", 200,  0, 500)
+
 
 tracking_method_enum = gen.enum([ gen.const("Based_on_size",      int_t, 0, "Known side size"),
                        gen.const("Ray_trassing",     int_t, 1, "Using ray trassing")],
