Implemented hzl_scanner(v1).

--- a/label_detector/dyn_cfg/LabelDetector.cfg
+++ b/label_detector/dyn_cfg/LabelDetector.cfg
@@ -19,9 +19,20 @@ gen.add("QR_Canny_par2",    int_t,    0, "Canny: first threshold for the hystere
 
 tracking_method_enum = gen.enum([ gen.const("Based_on_size",      int_t, 0, "Known side size"),
                        gen.const("Ray_trassing",     int_t, 1, "Using ray trassing")],
-                     "An enum to set the localizing method")
+                       "An enum to set the localizing method")
 
 gen.add("Localizing_method", int_t, 0, "An enum to set the localizing method", 0, 0, 1, edit_method=tracking_method_enum)
+
+hzl_matching_method_enum = gen.enum([ gen.const("SQDIFF",      int_t, 0, "Known side size"),
+				                      gen.const("SQDIFF_NORMED",     int_t, 1, "Using ray trassing"),
+				                      gen.const("TM_CCORR",     int_t, 2, "Using ray trassing"),
+				                      gen.const("TM_CCORR_NORMED",     int_t, 3, "Using ray trassing"),
+				                      gen.const("COEFF",     int_t, 4, "Using ray trassing"),
+				                      gen.const("COEFF_NORMED",     int_t, 5, "Using ray trassing")],
+				                      "An enum to set the matching method")
+
+gen.add("Hzl_matching_method", int_t, 0, "An enum to set the localizing method", 0, 0, 6, edit_method=hzl_matching_method_enum)
+
 
 
 exit(gen.generate(PACKAGE, "label_detector", "LabelDetector"))
