Hzl_scanner working

--- a/label_detector/dyn_cfg/LabelDetector.cfg
+++ b/label_detector/dyn_cfg/LabelDetector.cfg
@@ -9,6 +9,7 @@ gen.add("Debugging",   bool_t,   0, "Debugging mode on/off",  False)
 
 # QR CONFIGURATION
 gen.add("QR_Switch",   bool_t,   0, "enable/disable qrcode detection",  True)
+gen.add("QR_Debugging",   bool_t,   0, "enable/disable qrcode-scanning debugging",  False)
 gen.add("Qrcode_side_length",    int_t,    0, "The width of QrCode's square in mm", 182,  0, 500)
 gen.add("QR_Canny_par1",    int_t,    0, "Canny: first threshold for the hysteresis procedure", 100,  0, 500)
 gen.add("QR_Canny_par2",    int_t,    0, "Canny: first threshold for the hysteresis procedure", 200,  0, 500)
@@ -17,6 +18,7 @@ gen.add("QR_Canny_par2",    int_t,    0, "Canny: first threshold for the hystere
 
 # HZL CONFIGURATION
 gen.add("HZL_Switch",   bool_t,   0, "enable/disable hazardous label detection",  True)
+gen.add("HZL_Debugging",   bool_t,   0, "enable/disable hazardous label-scanning debugging",  False)
 gen.add("Hzl_Canny_par1",    int_t,    0, "Canny: first threshold for the hysteresis procedure", 100,  0, 500)
 gen.add("Hzl_Canny_par2",    int_t,    0, "Canny: first threshold for the hysteresis procedure", 200,  0, 500)
 
