--- a/label_detector/dyn_cfg/LabelDetector.cfg
+++ b/label_detector/dyn_cfg/LabelDetector.cfg
@@ -45,4 +45,11 @@ tracking_method_enum = gen.enum([ gen.const("Based_on_size",      int_t, 0, "Kno
                        "An enum to set the localizing method")
 gen.add("Localizing_method", int_t, 0, "An enum to set the localizing method", 0, 0, 1, edit_method=tracking_method_enum)
 
+group = gen.add_group("Group One", state = True)
+group.add("group1_int", int_t, 1, "A second level group parameter", 2)
+
+group2 = gen.add_group("Group Two", type="collapse", state = True)
+group2.add("HZL_Switch2",   bool_t,   0, "enable/disable hazardous label detection",  True)
+
+
 exit(gen.generate(PACKAGE, "label_detector", "LabelDetector"))
