--- a/victim_detector/package.xml
+++ b/victim_detector/package.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0"?>
 <package>
   <name>victim_detector</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <description>The victim_detector package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="nikos@todo.todo">nikos</maintainer>
+  <maintainer email="nikoscholis@gmail.com">Nikos Cholis</maintainer>
 
-
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>BSD</license>
+  <url type="website">https://bitbucket.org/nikoscholis/thesis_polymechanonvision</url>
 
 
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
@@ -43,9 +37,13 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>dynamic_reconfigure</build_depend>
+
+
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>dynamic_reconfigure</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
