blob and motion detectors configured a bit

--- a/victim_detector/dyn_cfg/MotionDetector.cfg
+++ b/victim_detector/dyn_cfg/MotionDetector.cfg
@@ -12,6 +12,16 @@ detection_mode_enum = gen.enum([  gen.const("stable_mode",      int_t, 0, "Known
 								   "Select detection mode")
 gen.add("Detection_mode", int_t, 0, "An enum to set the matching method", 0, 0, 1, edit_method=detection_mode_enum)
 
+thres_type_enum = gen.enum([ gen.const("Simple",      int_t, 0, "A small constant"),
+                       gen.const("Adaptive_Gaussian",     int_t, 1, "A medium constant"),
+                       gen.const("Adaptive_Mean",      int_t, 2, "A large constant"),
+                       gen.const("Otsu", int_t, 3, "An extra large constant")],
+                     "Choose desired thershold method")
+
+gen.add("Thres_method", int_t, 0, "Threshold method", 1, 0, 3, edit_method=thres_type_enum)
+
+gen.add("Thres_value",   int_t,   0, "'thresh' parameter of threshold. Applies only on SIMPLE method.", 20, 1, 255)
+
 exit(gen.generate(PACKAGE, "victim_detector/motion_detector", "MotionDetector"))
 
 
