--- a/victim_detector/dyn_cfg/MotionDetector.cfg
+++ b/victim_detector/dyn_cfg/MotionDetector.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "motion_detector" 
+PACKAGE = "victim_detector" 
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
@@ -22,6 +22,6 @@ gen.add("Thres_method", int_t, 0, "Threshold method", 1, 0, 3, edit_method=thres
 
 gen.add("Thres_value",   int_t,   0, "'thresh' parameter of threshold. Applies only on SIMPLE method.", 20, 1, 255)
 
-exit(gen.generate(PACKAGE, "victim_detector/motion_detector", "MotionDetector"))
+exit(gen.generate(PACKAGE, "motion_detector_node", "MotionDetector"))
 
 
