--- a/victim_detector/dyn_cfg/ObjectDetector.cfg
+++ b/victim_detector/dyn_cfg/ObjectDetector.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "object_detector" 
+PACKAGE = "victim_detector" 
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
@@ -9,6 +9,6 @@ gen.add("Debugging",   bool_t,   0, "Debugging mode on/off",  False)
 gen.add("MIN_object_size",    int_t,    0, "minimum size of object ", 100,  0, 500)
 gen.add("MAX_object_size",    int_t,    0, "maximum size of object ", 200,  0, 10000)
 
-exit(gen.generate(PACKAGE, "victim_detector/object_detector", "ObjectDetector"))
+exit(gen.generate(PACKAGE, "object_detector", "ObjectDetector"))
 
 
