--- a/victim_detector/dyn_cfg/ThermalDetector.cfg
+++ b/victim_detector/dyn_cfg/ThermalDetector.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "thermal_detector" 
+PACKAGE = "victim_detector" 
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
@@ -9,6 +9,6 @@ gen.add("Debugging",   bool_t,   0, "Debugging mode on/off",  False)
 gen.add("MIN_blob_size",    int_t,    0, "minimum size of blobs ", 100,  0, 500)
 gen.add("MAX_blob_size",    int_t,    0, "maximum size of blobs ", 1000,  0, 10000)
 
-exit(gen.generate(PACKAGE, "victim_detector/thermal_detector", "ThermalDetector"))
+exit(gen.generate(PACKAGE, "thermal_detector", "ThermalDetector"))
 
 
